[웹/모바일 > 메인페이지, 공지사항] 워딩 수정 [적용완료]

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -172,7 +172,7 @@
 			</div>
             <div class="member_works_showingoff_wrap">
                 <div class="tit_wrap">
-                    <h2>회원들이 작품 자랑하기</h2>
+                    <h2>회원들의 작품 자랑하기</h2>
                     <a href="/community/worksList"><button type="button" class="btn_more">더보기</button></a>
                 </div>                
                 <div class="works_layout" id="boaBox">
