[웹/모바일 > 로그인 > 마이페이지 > 모두보기] 팔로잉 출력 오류 [적용완료]

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -417,7 +417,7 @@
 		  	$("#myFollowing").append(html).trigger("create");
 	        $("#myFollowingTotal").text(total);
     	}else{
-    		$("#myFollowing_wrap").hide();
+    		$("#myFollowing_warp").hide();
     	}
     }
     function setMyNoti(data, total){
@@ -436,7 +436,7 @@
 		  	$("#myNoti").append(html).trigger("create");
 	        $("#myNotiTotal").text(total);
     	}else{
-    		$("#myNoti_wrap").hide();
+    		$("#myNoti_warp").hide();
     	}
     }
     
