--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -202,7 +202,7 @@
                         </ol>
                     </div>                    
                   </div>
-                  <div class="mypage_posts_warp mt10">
+                  <div class="myIssue_warp mt10">
                     <div class="issue_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_issue.png" alt=""><span>이슈</span><em id="myIssueTotal">+0</em></h2>
@@ -250,7 +250,7 @@
                         </li>                        
                       </ul>
                   </div>
-                  <div class="mypage_posts_warp">
+                  <div class="myNoti_wrap">
                     <div class="noticebox_posts">
                         <div class="tit_wrap">
                             <h2><img src="/resources/img/img_new/ico_notice.png" alt=""><span>알림함</span><em id="myNotiTotal">+0</em></h2>
@@ -448,7 +448,7 @@
 		  	$("#myScrap").append(html).trigger("create");
 	        $("#myScrapTotal").text(total);
     	}else{
-    		$(".mypage_works_wrap").hide();
+    		$(".mypage_scrap_wrap").hide();
     	}
     }
     
@@ -475,7 +475,7 @@
             $("#myFollowing").append(html).trigger("create");
             $("#myFollowingTotal").text(total);
     	}else{
-    		$(".mypage_works_wrap").hide();
+    		$(".mypage_following_wrap").hide();
     	}
     }
     
