[웹/모바일>커뮤니티> 자랑하기, 전시소개&후기, 이슈 게시판 페이지 > 기록하기 버튼] 기록하기 버튼 이동 경로 수정 [적용완료]

--- a/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_issue.html
@@ -514,7 +514,7 @@
 			modalConfirm("기록하기 페이지로 이동합니다.", 
 					function(confirm){
 						if(confirm){
-							location.href="/myPage/main";
+							location.href="/myPage/issue";
 						}
 				}
 			);
