--- a/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works_mo.html
@@ -201,7 +201,7 @@
 			modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
 			return;
 		} else {
-			location.href = '/myPage/myPageMobile';
+			location.href = '/myPage/show_off';
 		}
 	}
 
