--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -460,7 +460,7 @@
 			modalConfirm("기록하기 페이지로 이동합니다.", 
 					function(confirm){
 						if(confirm){
-							location.href="/myPage/main";
+							location.href="/myPage/show_off";
 						}
 				}
 			);
