[웹/모바일>자랑하기 등록> 작품판매등록 > 거래상세페이지]  요청하기 버튼 기능 오류 [작업완료] [웹/모바일>자랑하기 등록>작품판매등록 > 작품정보 > 요청하기] 팝업 워딩 수정 [작업완료]

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -511,13 +511,13 @@
     	    			html += '		</button>';
     	    			html += '	</div>';
     	    			html += '	<div class="btn_worksInfo_wrap" style="float: left; width: 40%; padding:5px;">';
-    	    			html += '		<button type="button" style="background: #626262;" class="ba-btn1 por" id="suggestBtn" onclick="openSuggestModal();">';
+    	    			html += '		<button type="button" style="background: #626262;" class="ba-btn1 por" id="suggestBtn" onclick="openModal(\'workSuggestModal\')">';
     	    			html += '			<span>요청하기</span>';
     	    			html += '		</button>';
     	    			html += '		<div class="clearboth"></div>';
     	    			html += '	</div>';
     	    			html += '	<div class="btn_worksInfo_wrap" style="float: left; width: 20%; padding:5px;">';
-    	    			html += '		<button type="button" style="background: #626262;" class="ba-btn1 por" id="suggestBtn" onclick="goBack();">';
+    	    			html += '		<button type="button" style="background: #969696;" class="ba-btn1 por" id="suggestBtn" onclick="goBack();">';
     	    			html += '			<span>목록</span>';
     	    			html += '		</button>';
     	    			html += '	</div>';
