--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -286,26 +286,49 @@
 									</table>
 								</li>
 							</ul>
-							<div class="bat-box">
-								<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid"
-									onclick="btn_purchaseOrBid_onclick()">
+							<!-- <div class="bat-box">
+								<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()">
 									<span>구매하기</span>
-									<button type="button" class="ba-btn1 por">
-										<span>요청하기</span>
-									</button>
-								<button type="button" class="ba-btn3" onclick="javascript:history.back();">
+								</button>
+								<button type="button" class="ba-btn1 por" onclick="openModal('workSuggestModal')">
+									<span>요청하기</span>
+								</button>	
+								<button type="button" class="ba-btn3 por" onclick="javascript:history.back();">
 									<span>목록으로 돌아가기</span>
-										<button type="button" class="ba-btn3" id="btn_history" data-toggle="modal" data-target="#bidHistory">
+								</button>
+								<button type="button" class="ba-btn3 por" id="btn_history" data-toggle="modal" data-target="#bidHistory">
 									<img src="/resources/img/de/mo/icon-2.jpg" />
 									<span>응찰히스토리</span>
 								</button>
-								</button>
-								</button>
-								<!--<button type="button" class="ba-btn2"
+								<button type="button" class="ba-btn2"
 									onclick="javascript:fnModalAlert();">
 									<img src="/resources/img/de/mo/icon-1.jpg" /><span>공유하기</span>
-								</button>-->
-						</div>
+								</button>
+						</div> -->
+						<div class="btn_worksInfo_wrap" style="float: left; width: 50%; padding:5px;">
+    	    				<button type="button" style="background: #626262;" class="" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()">
+    	    					<span>구매하기</span>
+     	    				</button>
+    	    			</div>
+    	    			
+    	    			<div class="btn_worksInfo_wrap" style="float: left; width: 50%; padding:5px;">
+    	    				<button type="button" style="background: #626262;" class="" onclick="openModal('workSuggestModal')">
+    	    					<span>요청하기</span>
+     	    				</button>
+    	    			</div>
+    	    			
+    	    			<div class="btn_worksInfo_wrap" style="float: left; width: 50%; padding:5px;">
+    	    				<button type="button" style="background: #969696;" class="" onclick="javascript:history.back();">
+    	    					<span>목록</span>
+     	    				</button>
+    	    			</div>
+    	    			
+    	    			<div class="btn_worksInfo_wrap" style="float: left; width: 50%; padding:5px;">
+    	    				<button type="button" style="background: #969696;" class="" id="btn_history" data-toggle="modal" data-target="#bidHistory">
+    	    					<img src="/resources/img/de/mo/icon-2.jpg" />
+    	    					<span>응찰히스토리</span>
+     	    				</button>
+    	    			</div>
 
 					</div>
 					
@@ -386,7 +409,6 @@
 		</div>
 	</div>
 </div>
-
 
 <!-- 신고하기 -->
 <div class="modal fade modal-s" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModal3Label" aria-hidden="true">
@@ -1078,6 +1100,10 @@ var page = 1;
 searchMainData(page);
 
 jQuery(document).ready(function($){
+	setWorkSuggestModal();
+	setWorkPriceSuggestModal();
+	setRequestPictureModal();
+
 	/* showingOffData(); //김동희 */
 
 	if(isMobile) {
@@ -1996,8 +2022,217 @@ function searchMainData(page) {
 }
 
 
+// 요청하기 모달 html 생성
+function setWorkSuggestModal() {
+	var html = '';
+	html += '<div class="modal fade modal-s" id="workSuggestModal" tabindex="-1" role="dialog" aria-labelledby="workSuggestLabel" aria-hidden="true">';
+	html += '	<div class="modal-dialog modal-baeg max-w530">';
+	html += '		<div class="modal-content">';
+	html += '			<div class="modal-header">';
+	html += '				<div class="baegs">';
+	html += '					<h2>제안 유형을 선택해 주세요.</h2>';
+	html += '				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '			<div class="modal-body">';
+	html += '				<div class="md-box-1">';
+	html += '					<div class="text-center mg_b40">';
+	html += '						<input type="radio" id="w1" name="suggest" value="price" checked>';
+	html += '						<label for="w1"><span></span>가격 제안</label>';
+	html += '						<input type="radio" id="w2" name="suggest" value="picture">';
+	html += '						<label for="w2" class="mg_l20"><span></span>상세 사진 요청</label>';
+	html += '					</div>';
+	html +=	'					<div class="baeg-btn mg_t30">';
+	html +=	'						<button type="button" class="baeg-b1" onclick="openSuggestModal();">확인</button>';
+	html +=	'						<button type="button" class="baeg-b2" onclick="closeModal(\'workSuggestModal\');">취소</button>';
+	html +=	'					</div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '		</div>';
+	html += '	</div>';
+	html += '</div>';
 
+	$(".wrap").after(html);
+}
 
+// 가격 제안 모달 html 생성
+function setWorkPriceSuggestModal() {
+	var html = '';
+	html += '<div class="modal fade modal-s" id="workPriceSuggestModal" tabindex="-1" role="dialog" aria-labelledby="workPriceSuggestLabel" aria-hidden="true">';
+	html += '	<div class="modal-dialog modal-baeg max-w530">';
+	html += '		<div class="modal-content">';
+	html += '			<div class="modal-header">';
+	html += '				<div class="baegs">';
+	html += '					<h2>해당 작품의 판매 가격을 제안해 주세요.</h2>';
+	html += '				    <div class="close" onclick="closeModal(\'workPriceSuggestModal\');"><img src="/resources/img/ba/icon-end.png" /></div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '			<div class="modal-body">';
+	html += '				<div class="md-box-1">';
+	html += '					<div class="text-center mg_b40">';
+	html += '						<input type="text" class="input-1" id="sgtPrc" placeholder="구매하고 싶은 금액 (원)" onkeyup="comma(this)" style="font-size:15px;"/>';
+	html += '					</div>';
+	html +=	'					<div class="baeg-btn mg_t30">';
+	html +=	'						<button type="button" class="baeg-b1" onclick="comtRequest(\'PRC\');">확인</button>';
+	html +=	'						<button type="button" class="baeg-b2" onclick="closeModal(\'workPriceSuggestModal\');">취소</button>';
+	html +=	'					</div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '		</div>';
+	html += '	</div>';
+	html += '</div>';
+	
+	$(".wrap").after(html);
+}
+
+// 상세 사진 요청 모달 html 생성
+function setRequestPictureModal() {
+	var html = '';
+	html += '<div class="modal fade modal-s" id="RequestPictureModal" tabindex="-1" role="dialog" aria-labelledby="RequestPictureLabel" aria-hidden="true">';
+	html += '	<div class="modal-dialog modal-baeg max-w530">';
+	html += '		<div class="modal-content">';
+	html += '			<div class="modal-header">';
+	html += '				<div class="baegs">';
+	html += '					<h2>해당 작품의 상세 사진을 요청해 주세요.</h2>';
+	html += '				    <div class="close" onclick="closeModal(\'RequestPictureModal\');"><img src="/resources/img/ba/icon-end.png" /></div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '			<div class="modal-body">';
+	html += '				<div class="md-box-1">';
+	html += '					<div class="text-center mg_b40">';
+	html += '						<input type="text" class="input-1" id="reqPic" placeholder="원하시는 작품의 사진 구도를 적어주세요 (100자 이내, 공백포함)" maxlength="100" style="font-size:15px;"/>';
+	html += '					</div>';
+	html +=	'					<div class="baeg-btn mg_t30">';
+	html +=	'						<button type="button" class="baeg-b1" onclick="comtRequest(\'PIC\');">확인</button>';
+	html +=	'						<button type="button" class="baeg-b2" onclick="closeModal(\'RequestPictureModal\');">취소</button>';
+	html +=	'					</div>';
+	html += '				</div>';
+	html += '			</div>';
+	html += '		</div>';
+	html += '	</div>';
+	html += '</div>';
+	
+	$(".wrap").after(html);
+}
+
+//요청하기 모달 확인 버튼 이벤트
+function openSuggestModal() {
+
+	var val = $("input[name=suggest]:checked").val();
+
+	if(val == "price") {
+		closeModal("workSuggestModal");
+		openModal("workPriceSuggestModal");
+	} else if(val == "picture") {
+		closeModal("workSuggestModal");
+		openModal("RequestPictureModal");
+	}
+	
+	
+}
+
+//판매 제안하기
+function comtRequest(notiCatCd) {
+	$("#ModalConfirm").css("z-index", 99999);
+	$("#ModalAlert").css("z-index", 100000);
+	
+	var info = result.deal;
+
+	var param = {
+		mbrSq: info.mbrSq,
+		workSq: info.workSq,
+		artstSq: info.artstSq,
+		notiTypCd: "GEN",
+		notiCatCd: notiCatCd,
+		questionMbrSq: sMbrSqVal
+	};
+
+	var msg = "";
+	
+	switch(notiCatCd) {
+	case "PRC": // 가격 협상(제안)
+		msg = "가격 제안";
+		param["dealSq"] = info.dealSq;
+		param["questionContent"] = $("#sgtPrc").val();
+		break;
+	case "PIC": // 상세 사진 요청
+		msg = "상세 사진 요청";
+		param["dealSq"] = info.dealSq;
+		param["questionContent"] = $("#reqPic").val();
+		break;
+	}
+	
+	if(notiCatCd == "PRC"){
+		if(sgtPrcCal() ) {
+			modalAlertShow("10,000원 단위로만 입력가능합니다.", obj.id);
+			return;
+		}
+		if(!$("#sgtPrc").val()) {
+			modalAlertShow("가격을 입력해주세요.");
+			return;
+		}
+	}
+	
+	if(notiCatCd == "PIC" && !$("#reqPic").val()) {
+		modalAlertShow("내용을 입력해주세요.");
+		return;
+	}
+
+	//만약 자랑하기 등록한 회원순번과 세션순번 벨리데이션
+	if(info.mbrSq == sMbrSqVal){
+		modalAlertShow("본인이 등록한 작품에는 "+msg+"을 할 수 없습니다.");
+	}else{
+		modalConfirm(msg + "하시겠습니까?", function(confirm) {
+			if(confirm) {
+					$.ajax({
+   					type: "post",
+   					url: "/community/insertComtRequest",
+   					data: param,
+   					success: function(data) {
+   						if(data.result) {
+			    				modalAlertShow(msg+ "이 완료되었습니다.");
+   						}
+   					},
+   					error: function(data) {
+   						modalAlertShow("오류가 발생했습니다.");
+   					}
+   				});
+			}
+		});
+	}
+}
+
+// 제안 가격 계산
+function sgtPrcCal() {
+	var obj = document.querySelector("#sgtPrc");
+	var isTrue = false;
+
+		if(obj.value != null && obj.value != ""){
+			obj.value = obj.value.replaceAll(/,/g,''); // ,값 공백처리
+			obj.value = parseInt(obj.value);
+			
+			var n = obj.value % 10000;
+			
+			if(obj.value < 10000 || n !== 0){
+				$("#ModalAlert").css("z-index", 10000);
+				//modalAlertShow("10,000원 단위로만 입력가능합니다.", obj.id);
+				obj.value = '';
+				isTrue = true;
+			}else{
+				obj.value = obj.value.replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
+			}
+		}
+
+		return isTrue;
+}
+	
+
+// 천단위 콤마 찍기
+function comma(obj) {
+	obj.value = obj.value.replace(/[^0-9]/g,'');   // 입력값이 숫자가 아니면 공백
+	obj.value = obj.value.replace(/,/g,'');          // ,값 공백처리
+    obj.value = obj.value.replace(/\B(?=(\d{3})+(?!\d))/g, ","); // 정규식을 이용해서 3자리 마다 , 추가 	
+}
 
 //비딩페이지로 이동
 function dealDetail(dealSq){
