[웹/모바일>자랑하기 등록> 나의 작품] 리스트 출력 변경 [작업완료]

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks.html
@@ -191,6 +191,9 @@ var result = new Object();
 var mbrSq = /*[[${mbrSq}]]*/ 'default';
 
 $("document").ready(function(){
+	
+	searchOptions.sortCd = "recent";
+	
 	if(mbrSq != null && mbrSq != "" && mbrSq != undefined){ //타인 마이페이지면
 		$("#left_menu").load("/myPage/mypage_common_left", "mbrSq="+mbrSq);  // 레프트 메뉴 삽입
 	}else{
@@ -208,8 +211,7 @@ function workList(callback){
 	}else{
 		searchOptions.mbrSq = sMbrSqVal;
 	}
-	
-	
+
 	var myTotal = 0;
 	var workTotal = 0;
 	var collTotal = 0;
