메인화면 배너 조회 이슈 수정 - 조회된 배너가 없을 경우 딜링아트 로고 출력

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -850,16 +850,28 @@
 		
 		// 신규 등록된 배너가 1개 이상일 경우
 		if(data != null && data.length > 0){
-			console.log("==================== >>>>>>>>>>>> 배너 설정 함수");
-			console.log(data);
 			
 			$(".swiper-wrapper").empty();
-			for(var i = 0; i < data.length; i++){
-				html += '<div class="swiper-slide" align="center" style="background-color:#ffffff;">';
-				html += '	<a href="' + data[i].bnnMLndUrl + '">';
-	    		html += '		<img src="' + data[i].bnnMpImgUrl + '" alt="">';
-	    		html += '	</a>';
-				html += '</div>'	
+			
+			for(var i = 0; i < 4; i++){				
+				
+				// 메인화면 배너 조회 결과가 있을 경우
+				if(i < data.length){
+					html += '<div class="swiper-slide" align="center" style="background-color:#ffffff;">';
+					html += '	<a href="' + data[i].bnnMLndUrl + '">';
+		    		html += '		<img src="' + data[i].bnnMmImgUrl + '" alt="">';
+		    		html += '	</a>';
+					html += '</div>'	
+					
+				// 메인화면 배너 조회 결과가 없을 경우	
+				}else{
+					html += '<div class="swiper-slide" align="center" style="background-color:#ffffff;">';
+					html += '	<a href="https://www.dealing-art.com/main">';
+		    		html += '		<img src="/resources/img/bigLogo2.png" alt="">';
+		    		html += '	</a>';
+					html += '</div>'
+				}
+				
 			}
 
 			return html;
