--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -754,9 +754,13 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 .works_showingoff_detail_page_wrap .icon_box ul li .ico_report{width: 50px;height: 50px;border-radius: 999px;background: #eaebea url("../img/img_new/ico_report.png") 50% 50% no-repeat;}
 
 .works_showingoff_detail_page_wrap .picture_detail{display: flex;justify-content: center;flex-direction: column;align-items: center;border-bottom: 1px solid #e8e8e8;}
-.works_showingoff_detail_page_wrap .picture_detail .method{padding: 50px 0;font-size: 20px;font-weight: 500;}
-.works_showingoff_detail_page_wrap .picture_detail .small_tit{padding: 50px 0;font-size: 28px;font-weight: 700;}
-.works_showingoff_detail_page_wrap .picture_detail p{padding: 30px 0 50px;font-size: 16px;font-weight: 300;}
+/* padding: 50px 0 때문에 사이즈, 자간 조절이 너무 많이 띄워지는 발생 요소 때문에 아래 CSS로 변경 */
+/* .works_showingoff_detail_page_wrap .picture_detail .method{padding: 50px 0;font-size: 20px;font-weight: 500;} */
+/* .works_showingoff_detail_page_wrap .picture_detail .small_tit{padding: 50px 0;font-size: 28px;font-weight: 700;} */
+/* .works_showingoff_detail_page_wrap .picture_detail p{padding: 30px 0 50px;font-size: 16px;font-weight: 300;} */
+.works_showingoff_detail_page_wrap .picture_detail .method{font-size: 20px;font-weight: 500;}
+.works_showingoff_detail_page_wrap .picture_detail .small_tit{font-size: 28px;font-weight: 700;}
+.works_showingoff_detail_page_wrap .picture_detail p{font-size: 16px;font-weight: 300;}
 
 .works_info_wrap{margin-top: 30px;}
 .works_info_wrap:after{content: "";display: block;clear: both;}
