메인배너가 전체 배너에 데이터가 포함되는 현상 수정

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -560,7 +560,7 @@
     		type: "POST",
     		url: "/main/totalContent",
     		success: (function(response){
-    			var bannerWrap = $(".swiper-wrapper");
+    			var bannerWrap = $("#mainBanner");
     			
     			setBoa(response.boas);
     			setNowDealWorks(response.nowDealWorks);
