--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -285,7 +285,8 @@ $(function() {
 		artstInfoHtml += '</dl>';
 		}
 		
-		artstInfoHtml += '	<dl class="ad-dl" style=" opacity: 0.3;">';
+		//artstInfoHtml += '	<dl class="ad-dl" style=" opacity: 0.3;">';
+		artstInfoHtml += '	<dl class="ad-dl">';
 		artstInfoHtml += '	<dt>학력</dt>';
 		artstInfoHtml += '	<dd>';
 		
