--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -4428,7 +4428,8 @@ code{
     color: #e9625c;
 }
 .mgz-ul li.active a:after{content:'';position: absolute;bottom: 0;left: 0;background-color: #e9625c;width: 100%;height: 4px;}
-
+/* 인사이트, 아티스트필름 데이터 출력 요소 3개씩 일때 CSS */
+/*
 .mgz-list{
     margin: 100px auto 50px auto;
     width: 100%;
@@ -4443,6 +4444,23 @@ code{
 .mgz-list li:nth-child(3n){
     margin-right: 0;
 }
+*/
+/* 인사이트, 아티스트필름 데이터 출력 요소 4개씩 일때 CSS */
+.mgz-list{
+    margin: 100px auto 50px auto;
+    width: 100%;
+    max-width: 1500px;
+}
+.mgz-list li{
+    width: 323px;
+    float: left;
+    margin-right: 69px;
+}
+.mgz-list li:nth-child(2n){}
+.mgz-list li:nth-child(4n){
+    margin-right: 0;
+}
+
 .mgz-list li a{
     display: block;
 }
