F/O_형태/구분 필터 속성 추가 [적용완료]

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -150,6 +150,8 @@
 										<label for="b1"><span></span>평면</label><br/>
 										<input type="checkbox" id="b2" name="workShpCd" value="SLD" class="searchOption" onclick="dealSearch()"/>
 										<label for="b2"><span></span>입체</label><br/>
+										<input type="checkbox" id="b3" name="workShpCd" value="ANT" class="searchOption" onclick="dealSearch()"/>
+										<label for="b3"><span></span>고미술</label>
 										<!-- <input type="checkbox" id="b3" name="workShpCd" value="NFT" class="searchOption" onclick="dealSearch()"/>
 										<label for="b3"><span></span>NFT</label> -->
 									</div>
@@ -170,7 +172,9 @@
                                         <input type="checkbox" id="c22" name="workClsfcCd" value="EDITION" class="searchOption" onclick="dealSearch()"/>
 										<label for="c22"><span></span>에디션</label><br/>
                                         <input type="checkbox" id="c33" name="workClsfcCd" value="PICTURE" class="searchOption" onclick="dealSearch()"/>
-										<label for="c33"><span></span>사진</label>
+										<label for="c33"><span></span>사진</label><br/>
+										<input type="checkbox" id="c44" name="workClsfcCd" value="CRFTS" class="searchOption" onclick="dealSearch()"/>
+										<label for="c44"><span></span>공예품</label>
 										<!-- <input type="checkbox" id="c1" name="workClsfcCd" value="ORNTPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c1"><span></span>동양화</label><br/>
                                         <input type="checkbox" id="c2" name="workClsfcCd" value="WSTNPAI" class="searchOption" onclick="dealSearch()"/>
